Customize home page

--- a/LibraNET/Views/Home/Index.cshtml
+++ b/LibraNET/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div style="padding: 2rem 1rem; margin-bottom: 2rem; background-color: #e9ecef; border-radius: 0.9rem;">
+	<div class="container">
+		<h1 class="display-3">Welcome to  LibraNET!</h1>
+		<p>Embark on a captivating journey through an online library brimming with an expansive collection of books. Unveil mesmerizing covers, renowned authors, and enticing summaries, empowering you to choose the perfect book to ignite your imagination.</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">View all »</a></p>
+	</div>
 </div>
+
+<hr>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<h2>Book 1</h2>
+			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+		</div>
+		<div class="col-md-4">
+			<h2>Book 2</h2>
+			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+		</div>
+		<div class="col-md-4">
+			<h2>Book 3</h2>
+			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+		</div>
+	</div>
+</div>
+
+<hr>
