--- a/LibraNET/Views/Home/Index.cshtml
+++ b/LibraNET/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ICollection<BookIndexViewModel>
+@{
 	ViewData["Title"] = "Home Page";
 }
 
@@ -10,26 +11,26 @@
 	</div>
 </div>
 
-<hr>
-
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">
-			<h2>Book 1</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-		</div>
-		<div class="col-md-4">
-			<h2>Book 2</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-		</div>
-		<div class="col-md-4">
-			<h2>Book 3</h2>
-			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-			<p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-		</div>
+<div class="container py-2">
+	<h2 class="display-5 text-center">
+		New books
+	</h2>
+	<hr />
+	<div class="row justify-content-center py-3">
+		@foreach (var book in Model)
+		{
+			<div class="col-md-8 col-lg-6 col-xl-4 py-1">
+				<div class="card" style=" margin-bottom: 2rem; background-color: #e9ecef; border-radius: 0.9rem;">
+					<div class="text-center py-3">
+						<img src="~/Images/Books/@(book.ImageId).jpg" style="height: 400px; width:auto" class="card-img-top" />
+					</div>
+					<div class="card-body">
+						<h2 class="card-title text-center">@book.Title</h2>
+						<p class="card-text">@(book.Description.Substring(0, 230))...</p>
+					<p><a class="btn btn-secondary justify-content-end" asp-controller="Book" asp-action="Details" asp-route-id="@book.Id" role="button">View details »</a></p>
+					</div>
+				</div>
+			</div>
+		}
 	</div>
 </div>
-
-<hr>
