--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LibraNET
-@using LibraNET.Models
+@using LibraNET.Web.ViewModels;
+@using LibraNET.Web.ViewModels.Book;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
