--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -7,12 +7,13 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/LibraNET.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">LibraNET</a>
+				<a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">LibraNET</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -23,10 +24,10 @@
 							<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 					</ul>
-					<form class="d-flex input-group w-auto justify-content-md-start">
+@*					<form class="d-flex input-group w-auto justify-content-md-start">
 						<input type="search" class="form-control" placeholder="Search book..." aria-label="Search" />
 						<button class="btn btn-outline-success" type="button" data-mdb-ripple-color="dark">Search</button>
-					</form>
+					</form>*@
 					<partial name="_LoginPartial" />
 				</div>
 			</div>
