--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/LibraNET.styles.css" asp-append-version="true" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" integrity="sha512-6S2HWzVFxruDlZxI3sXOZZ4/eJ8AcxkQH1+JjSe/ONCEqR9L4Ysq5JdT5ipqtzU7WHalNwzwBv+iE51gNHJNqQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 	<header>
@@ -24,9 +25,9 @@
 							<a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 					</ul>
-@*					<form class="d-flex input-group w-auto justify-content-md-start">
-						<input type="search" class="form-control" placeholder="Search book..." aria-label="Search" />
-						<button class="btn btn-outline-success" type="button" data-mdb-ripple-color="dark">Search</button>
+					@*					<form class="d-flex input-group w-auto justify-content-md-start">
+					<input type="search" class="form-control" placeholder="Search book..." aria-label="Search" />
+					<button class="btn btn-outline-success" type="button" data-mdb-ripple-color="dark">Search</button>
 					</form>*@
 					<partial name="_LoginPartial" />
 				</div>
@@ -47,6 +48,9 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js" integrity="sha512-lbwH47l/tPXJYG9AcFNoJaTMhGvYWhVM9YI43CT+uteTRRaiLCui8snIgyAN8XWgNjNhCqlAUdzZptso6OCoFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<partial name="_NotificationScriptsPartial" />
+
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
