Add all books page

--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using LibraNET
 @using LibraNET.Web.ViewModels;
-@using LibraNET.Web.ViewModels.Book;
+@using LibraNET.Web.ViewModels.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
