--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -1,34 +1,34 @@
 ﻿@model AllBooksViewModel
 <div class="container">
-	<div class="rounded d-flex align-items-center justify-content-between border" id="header">
-		<button class="btn text-uppercase w-25 text-center btn-success text-white h-100" data-bs-toggle="collapse" href="#filterbar" role="button" aria-expanded="false" aria-controls="filterbar" id="filter-btn" onclick="changeBtnTxt()">
-			<div>Show filters</div>
-		</button>
-		<div id="sort" class="text-center">
-			<form asp-controller="Book" asp-action="All" id="sortForm" method="get">
-				<label class="text-muted">Sort by: </label>
-				<select asp-for="BookSorting" id="sortSelect" onchange="submitForm()">
-					<option value="0">Title</option>
-					<option value="1">Publication Date</option>
-					<option value="2">Rating</option>
-					<option value="3">Price</option>
-				</select>
-			</form>
-		</div>
-		<div id="search" class="mx-1">
-			<form asp-controller="Book" asp-action="All" method="get">
-				<div class="input-group">
-					<input asp-for="SearchString" type="search" class="form-control rounded-left" placeholder="Search by title or ISBN" aria-label="Search" aria-describedby="search-addon" />
-					<button type="submit" class="btn btn-outline-success rounded-left">
-						<i class="bi bi-search"></i>
-					</button>
+	<form asp-controller="Book" asp-action="All" id="filterForm" method="get">
+		<div class="rounded d-flex align-items-center border" id="header">
+			<button class="btn text-uppercase text-center btn-success text-white h-100 w-25"
+					type="button" data-bs-toggle="collapse" data-bs-target="#filterbar"
+					aria-expanded="false" aria-controls="filterbar" id="filter-btn">
+				Show filters
+			</button>
+			<div id="searchAndSort" class="d-flex mx-2 justify-content-between w-75">
+				<div id="sort" class="my-2 w-50 text-center">
+					<label class="text-muted">Sort by: </label>
+					<select asp-for="BookSorting" class="" id="sortSelect" onchange="submitForm()">
+						<option value="0">Title</option>
+						<option value="1">Publication Date</option>
+						<option value="2">Rating</option>
+						<option value="3">Price</option>
+					</select>
 				</div>
-			</form>
+				<div id="search" class="my-2 w-50">
+					<div class="input-group">
+						<input asp-for="SearchString" type="search" class="form-control rounded-left" placeholder="Search by title or ISBN" aria-label="Search" aria-describedby="search-addon" />
+						<button type="submit" class="btn btn-outline-success rounded-left">
+							<i class="bi bi-search"></i>
+						</button>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
-	<div id="content" class="my-4">
-		<div id="filterbar" class="collapse my-4">
-			<form onsubmit="Get" method="get">
+		<div id="content" class="my-4">
+			<div id="filterbar" class="collapse my-4">
 				<div class="btn-group w-100">
 					<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
 					<button class="btn btn-warning text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
@@ -36,10 +36,11 @@
 				<div class="box border-bottom">
 					<div class="box-label text-uppercase d-flex align-items-center">Authors</div>
 					<div id="authors-box" class="mt-2 mr-1">
-						@foreach (var author in Model.Authors)
+						@foreach (var author in @Model.Authors)
 						{
 							<div class="form-check align-content-center mx-1">
-								<input class="form-check-input" type="checkbox" value="@author.Id" id="@author.Id">
+								<input class="form-check-input" name="SelectedAuthorsIds" value="@author.Id" 
+								type="checkbox" checked="@author.IsSelected" id="@author.Id">
 								<label class="form-check-label" for="@author.Id">@author.Name</label>
 							</div>
 						}
@@ -48,10 +49,11 @@
 				<div class="box border-bottom">
 					<div class="box-label text-uppercase d-flex align-items-center">Categories</div>
 					<div id="categories-box" class="mt-2 mr-1">
-						@foreach (var category in Model.Categories)
+						@foreach (var category in @Model.Categories)
 						{
 							<div class="form-check align-content-center mx-1">
-								<input class="form-check-input" type="checkbox" value="@category.Id" id="@category.Id">
+								<input class="form-check-input" name="SelectedCategoriesIds" value="@category.Id" 
+								type="checkbox" checked="@category.IsSelected" id="@category.Id">
 								<label class="form-check-label" for="@category.Id">@category.Name</label>
 							</div>
 						}
@@ -62,8 +64,10 @@
 					<div id="price">
 						<div class="middle">
 							<div class="multi-range-slider">
-								<input type="range" id="input-left" min="@Model.MinPrice" max="@Model.MaxPrice" value="@Model.MinPrice">
-								<input type="range" id="input-right" min="@Model.MinPrice" max="@Model.MaxPrice" value="@Model.MaxPrice">
+								<input asp-for="SelectedMinPrice" type="range" id="input-left" 
+								min="@Model.MinPrice" max="@Model.MaxPrice">
+								<input asp-for="SelectedMaxPrice" type="range" id="input-right" 
+								min="@Model.MinPrice" max="@Model.MaxPrice">
 								<div class="slider">
 									<div class="track"></div>
 									<div class="range"></div>
@@ -78,55 +82,24 @@
 						</div>
 					</div>
 				</div>
-			</form>
-		</div>
-		<div id="products">
-			<div class="row justify-content-center">
-				@foreach (var book in Model.Books)
-				{
-					<div class="col-md-8 col-lg-6 col-xl-4 my-3">
-						<div class="card text-black rounded">
-							<div class="text-center">
-								<img src="~/Images/Books/@(book.ImageId).jpg" alt="@book.Title" />
-							</div>
-							<div class="card-body">
-								<div class="text-center">
-									<h5 class="card-title">@book.Title</h5>
-									<p class="text-muted">
-										@(book.Authors.Count == 1 ? "Author" : "Authors"):
-										@{
-											for (int i = 0; i < book.Authors.Count; i++)
-											{
-												<a asp-controller="Author" asp-action="Details" asp-route-id="@book.Authors[i].Id">@book.Authors[i].Name</a><span>@(i == book.Authors.Count - 1 ? "" : ", ")</span>
-											}
-										}
-									</p>
-									<p class="text-muted mb-4">
-										@(book.Categories.Count == 1 ? "Category" : "Categories"):
-										@{
-											for (int i = 0; i < book.Categories.Count; i++)
-											{
-												<a onclick="">@book.Categories[i].Name</a><span>@(i == book.Categories.Count - 1 ? "" : ", ")</span>
-											}
-										}
-									</p>
-									<h5 class="fw-bold">$@($"{book.Price:f2}")</h5>
-								</div>
-							</div>
-						</div>
-					</div>
-
-				}
+			</div>
+			<div id="products">
+				<div class="row justify-content-center">
+					@foreach (var book in Model.Books)
+					{
+						<partial name="_BookPartial" model="@book"></partial>
+					}
+				</div>
 			</div>
 		</div>
-	</div>
+	</form>
+	<nav class="text-center">
+		<ul class="pagination d-inline-flex">
+			<li class="page-item"> <a class="page-link" href="#" aria-label="Previous"> <span aria-hidden="true" class="font-weight-bold">&lt;</span></a> </li>
+			<li class="page-item active"><a class="page-link" href="#">1</a></li>
+			<li class="page-item"><a class="page-link" href="#">..</a></li>
+			<li class="page-item"><a class="page-link" href="#">24</a></li>
+			<li class="page-item"> <a class="page-link" href="#" aria-label="Next"> <span aria-hidden="true" class="font-weight-bold">&gt;</span></a> </li>
+		</ul>
+	</nav>
 </div>
-<nav class="text-center">
-	<ul class="pagination d-inline-flex">
-		<li class="page-item"> <a class="page-link" href="#" aria-label="Previous"> <span aria-hidden="true" class="font-weight-bold">&lt;</span></a> </li>
-		<li class="page-item active"><a class="page-link" href="#">1</a></li>
-		<li class="page-item"><a class="page-link" href="#">..</a></li>
-		<li class="page-item"><a class="page-link" href="#">24</a></li>
-		<li class="page-item"> <a class="page-link" href="#" aria-label="Next"> <span aria-hidden="true" class="font-weight-bold">&gt;</span></a> </li>
-	</ul>
-</nav>
