--- a/LibraNET/wwwroot/css/site.css
+++ b/LibraNET/wwwroot/css/site.css
@@ -30,13 +30,13 @@ body {
 
 #filter-btn {
     border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px
+    border-bottom-right-radius: 0px;
 }
 
 #sort select {
+    height:100%;
     outline: none;
     padding: 7px 0px;
-    margin-left: 0.25rem !important;
     color: #6c757d;
     border-color: #ced4da;
     border-radius: 0.25rem;
@@ -113,32 +113,37 @@ body {
     border: hidden !important;
 }
 
+    #products .card p, .card-title {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        line-height: 1em;
+        height: 2em;
+    }
+
+
+.img-container {
+    height: 293px;
+    width: auto;
+    display: flex;
+    justify-content: center;
+}
+
+    .img-container img {
+        margin: auto;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
 .card:hover {
     box-shadow: 2px 2px 15px #b7b7b7;
 }
 
 .card .product-name {
     font-weight: 600
-}
-
-.card img {
-    height: 400px;
-    width: auto;
-    padding-top: 1rem;
-}
-
-.product-img {
-    padding-top: 10px;
-    width: inherit;
-    height: 180px;
-    object-fit: contain;
-    display: block
-}
-
-@media(max-width:1399px) {
-    #products .card img {
-        height: 350px;
-    }
 }
 
 @media(min-width:1200px) {
@@ -153,20 +158,44 @@ body {
     }
 }
 
-@media(max-width: 992px) {
+@media(max-width: 991px) {
     #filterbar {
         float: none;
         width: 100%;
         margin-bottom: 20px;
     }
 
-    #content.my-5 {
-        margin-top: 20px !important;
-        margin-bottom: 20px !important
+    #header {
+        justify-content: normal !important;
+        height: auto !important;
     }
 
-    #products .card img {
-        height: 500px;
+    #searchAndSort {
+        display: block !important;
+        height: auto !important;
+        width: 100% !important;
+    }
+
+    #search {
+        width: auto !important;
+    }
+
+    #sort {
+        width: auto !important;
+        display: flex !important;
+        vertical-align: central !important;
+    }
+
+        #sort select {
+            width: 100% !important;
+        }
+        #sort label {
+            white-space: nowrap !important;
+            padding: 10px !important;
+        }
+
+    #header {
+        height:108px !important;
     }
 }
 
@@ -176,39 +205,12 @@ body {
     }
 }
 
-@media(min-width: 770px) {
-    #sort {
-        padding-right: 3rem !important;
-        padding-left: 3rem !important;
-        width: 50% !important;
-    }
-
-    #search {
-        padding-right: 1rem !important;
-        padding-left: 3rem !important;
-        width: 50% !important;
-    }
-
-    #sort select {
-        width: 50% !important;
-    }
+@media(max-width: 767px) {
 }
-
-@media(max-width: 400px) {
-
-    #products .card img {
-        height: 400px;
-    }
-}
-
 
 @media(max-width: 315px) {
-    #filter-btn div {
+    #filter-btn {
         font-size: 9px;
-    }
-
-    #products .card img {
-        height: 300px;
     }
 }
 
