--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Text;
-@using static LibraNET.Common.GeneralApplicationConstants;
-@model AllBooksBookViewModel
+﻿@model AllBooksBookViewModel
 <div class="my-3 col-md-8 col-lg-6 col-xl-4">
 	<div class="card text-black">
 		<div class="text-center img-container">
