--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using LibraNET
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Enums;
+
+@using System.Text;
+@using static LibraNET.Common.GeneralApplicationConstants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
