--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -4,7 +4,7 @@
 		<div class="rounded d-flex align-items-center border" id="header">
 			<button class="btn text-uppercase text-center btn-success text-white h-100 w-25"
 					type="button" data-bs-toggle="collapse" data-bs-target="#filterbar"
-					aria-expanded="false" aria-controls="filterbar" id="filter-btn">
+					aria-expanded="true" aria-controls="filterbar" id="filter-btn">
 				Show filters
 			</button>
 			<div id="searchAndSort" class="d-flex mx-2 justify-content-between w-75">
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 		<div id="content" class="my-4">
-			<div id="filterbar" class="collapse my-4">
+			<div id="filterbar" class="show my-4">
 				<div class="btn-group w-100">
 					<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
 					<button class="btn btn-warning text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
