--- a/LibraNET/wwwroot/css/site.css
+++ b/LibraNET/wwwroot/css/site.css
@@ -34,7 +34,7 @@ body {
 }
 
 #sort select {
-    height:100%;
+    height: 100%;
     outline: none;
     padding: 7px 0px;
     color: #6c757d;
@@ -42,8 +42,6 @@ body {
     border-radius: 0.25rem;
     font-size: 1rem;
 }
-
-
 
 #filterbar {
     width: 30%;
@@ -138,80 +136,12 @@ body {
         max-height: 100%;
     }
 
-.card:hover {
+#products .card:hover {
     box-shadow: 2px 2px 15px #b7b7b7;
 }
 
-.card .product-name {
+#products .card .product-name {
     font-weight: 600
-}
-
-@media(min-width:1200px) {
-    #filterbar {
-        width: 25%
-    }
-}
-
-@media(max-width:1200px) {
-    #filterbar {
-        width: 28%
-    }
-}
-
-@media(max-width: 991px) {
-    #filterbar {
-        float: none;
-        width: 100%;
-        margin-bottom: 20px;
-    }
-
-    #header {
-        justify-content: normal !important;
-        height: auto !important;
-    }
-
-    #searchAndSort {
-        display: block !important;
-        height: auto !important;
-        width: 100% !important;
-    }
-
-    #search {
-        width: auto !important;
-    }
-
-    #sort {
-        width: auto !important;
-        display: flex !important;
-        vertical-align: central !important;
-    }
-
-        #sort select {
-            width: 100% !important;
-        }
-        #sort label {
-            white-space: nowrap !important;
-            padding: 10px !important;
-        }
-
-    #header {
-        height:108px !important;
-    }
-}
-
-@media(min-width: 992px) {
-    #products .row {
-        justify-content: normal !important;
-    }
-}
-
-@media(max-width: 767px) {
-}
-
-@media(max-width: 315px) {
-    #filter-btn {
-        font-size: 9px;
-    }
 }
 
 .middle {
@@ -301,3 +231,78 @@ input[type=range] {
         background-color: red;
         -webkit-appearance: none
     }
+
+.page-item.active .page-link {
+    background-color: #198754;
+    border-color: #198754;
+    color: white !important;
+}
+
+@media(min-width:1200px) {
+    #filterbar {
+        width: 25%
+    }
+}
+
+@media(max-width:1200px) {
+    #filterbar {
+        width: 28%
+    }
+}
+
+@media(max-width: 991px) {
+    #filterbar {
+        float: none;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    #header {
+        justify-content: normal !important;
+        height: auto !important;
+    }
+
+    #searchAndSort {
+        display: block !important;
+        height: auto !important;
+        width: 100% !important;
+    }
+
+    #search {
+        width: auto !important;
+    }
+
+    #sort {
+        width: auto !important;
+        display: flex !important;
+        vertical-align: central !important;
+    }
+
+        #sort select {
+            width: 100% !important;
+        }
+
+        #sort label {
+            white-space: nowrap !important;
+            padding: 10px !important;
+        }
+
+    #header {
+        height: 108px !important;
+    }
+}
+
+@media(min-width: 992px) {
+    #products .row {
+        justify-content: normal !important;
+    }
+}
+
+@media(max-width: 767px) {
+}
+
+@media(max-width: 315px) {
+    #filter-btn {
+        font-size: 9px;
+    }
+}
