Fix page blink when filters are shown and the page is refreshed

--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<div id="content" class="my-4">
-			<div id="filterbar" class="show my-4">
+			<div id="filterbar" class="collapse my-4">
 				<div class="btn-group w-100">
 					<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
 					<button class="btn btn-warning text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
