--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model AllBooksBookViewModel
+﻿@model BookViewModel
 <div class="my-3 col-md-8 col-lg-6 col-xl-4">
 	<div class="card text-black">
 		<div class="text-center img-container">
