Change book card in home page

--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BookViewModel
 <div class="my-3 col-md-8 col-lg-6 col-xl-4">
-	<div class="card text-black">
+	<div class="card text-black product-card">
 		<div class="text-center img-container">
 			<img class="p-3" src="~/Images/Books/@(Model.ImageId).jpg" alt="@Model.Title" />
 		</div>
