Change reset btn color

--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -32,7 +32,7 @@
 			<div id="filterbar" class="collapse my-4">
 				<div class="btn-group w-100">
 					<button class="btn btn-success text-white text-uppercase" id="apply" type="submit">Apply</button>
-					<button class="btn btn-warning text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
+					<button class="btn btn-dark text-white text-uppercase" id="reset" type="button" onclick="resetFilters()">Reset</button>
 				</div>
 				<div class="box border-bottom">
 					<div class="box-label text-uppercase d-flex align-items-center">Authors</div>
