--- a/LibraNET/Views/Home/Index.cshtml
+++ b/LibraNET/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 	ViewData["Title"] = "Home Page";
 }
 
-<div style="padding: 2rem 1rem; margin-bottom: 2rem; background-color: #e9ecef; border-radius: 0.9rem;">
+<div class="greeting-container">
 	<div class="container">
 		<h1 class="display-3">Welcome to  LibraNET!</h1>
 		<p>Embark on a captivating journey through an online library brimming with an expansive collection of books. Unveil mesmerizing covers, renowned authors, and enticing summaries, empowering you to choose the perfect book to ignite your imagination.</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">View all »</a></p>
+		<p><a class="btn btn-success btn-lg" asp-controller="Book" asp-action="All">View all »</a></p>
 	</div>
 </div>
 
