--- a/LibraNET/wwwroot/css/site.css
+++ b/LibraNET/wwwroot/css/site.css
@@ -22,7 +22,15 @@ body {
 * {
     font-family: 'Poppins', sans-serif
 }
+/*/Home/Index*/
+.greeting-container {
+    padding: 2rem 1rem;
+    margin-bottom: 2rem;
+    background-color: #e9ecef;
+    border-radius: 0.9rem;
+}
 
+/*/Book/All*/
 #header {
     width: 100%;
     height: 60px;
@@ -105,25 +113,6 @@ body {
         border-radius: 2px
     }
 
-
-.product-card {
-    cursor: pointer;
-    transition: .3s all ease-in-out;
-    border: hidden !important;
-}
-
-    .product-card p, .card-title {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2; /* number of lines to show */
-        line-clamp: 2;
-        -webkit-box-orient: vertical;
-        line-height: 1em;
-        height: 2em;
-    }
-
-
 .img-container {
     height: 293px;
     width: auto;
@@ -137,13 +126,6 @@ body {
         max-height: 100%;
     }
 
-.product-card:hover {
-    box-shadow: 2px 2px 15px #b7b7b7;
-}
-
-.product-card .product-name {
-    font-weight: 600
-}
 
 .middle {
     position: relative;
@@ -307,3 +289,30 @@ input[type=range] {
         font-size: 9px;
     }
 }
+
+
+/*_BookPartial*/
+.product-card {
+    cursor: pointer;
+    transition: .3s all ease-in-out;
+    border: hidden !important;
+}
+
+    .product-card p, .card-title {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        line-height: 1em;
+        height: 2em;
+    }
+
+    .product-card:hover {
+        box-shadow: 2px 2px 15px #b7b7b7;
+    }
+
+    .product-card .product-name {
+        font-weight: 600
+    }
