--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -1,6 +1,7 @@
-﻿@using X.PagedList.Mvc.Core;
-@using X.PagedList.Web.Common;
-@model AllBooksViewModel
+﻿@model AllBooksViewModel
+@{
+	ViewData["Title"] = "All Books";
+}
 <div class="container">
 	<form asp-controller="Book" asp-action="All" id="filterForm" method="get">
 		<div class="rounded d-flex align-items-center border" id="header">
