--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,7 +1,10 @@
 ﻿@using LibraNET
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Enums;
+@using static LibraNET.Common.GeneralApplicationConstants;
 
 @using System.Text;
-@using static LibraNET.Common.GeneralApplicationConstants;
+
+@using X.PagedList.Mvc.Core;
+@using X.PagedList.Web.Common;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
