--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Book" asp-action="All">All Books</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
+						</li>
 					</ul>
 					<partial name="_LoginPartial" />
 				</div>
