--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LibraNET
 @using LibraNET.Web.ViewModels;
+@using LibraNET.Web.ViewModels.Book;
 @using LibraNET.Web.ViewModels.Enums;
 @using static LibraNET.Common.GeneralApplicationConstants;
 
