--- a/LibraNET/Views/Book/Add.cshtml
+++ b/LibraNET/Views/Book/Add.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-controller="Book" asp-action="Add" method="post">
+        <form asp-controller="Book" asp-action="Add" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label asp-for="@Model.Title" class="form-label">Title</label>
                 <input asp-for="@Model.Title" class="form-control" aria-required="true" />
@@ -20,7 +20,7 @@
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.PublicationDate" class="form-label">Publication Date</label>
-                <input type="date" asp-for="@Model.PublicationDate" class="form-control" aria-required="true" value="@DateTime.Now.ToString("yyyy-MM-dd")" />
+                <input type="date" asp-for="@Model.PublicationDate" class="form-control" aria-required="true"/>
                 <span asp-validation-for="@Model.PublicationDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
@@ -50,7 +50,7 @@
             </div>
             <div class="mb-3">
                 <label asp-for="AvailableCount" class="form-label">Available Count</label>
-                <input asp-for="AvailableCount" class="form-control" value="1"/>
+                <input asp-for="AvailableCount" class="form-control"/>
                 <span asp-validation-for="AvailableCount" class="text-danger"></span>
             </div>
             <div class="mb-3">
@@ -59,26 +59,70 @@
                 <span asp-validation-for="PublisherName" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.CategoryId" class="form-label">Category</label>
-                <select asp-for="@Model.CategoryId" class="form-control">
+                <label asp-for="@Model.SelectedCategoriesIds" class="form-label">Category</label>
+                <select asp-for="@Model.SelectedCategoriesIds" class="form-control">
                     <option value=""></option>
                     @foreach (var category in @Model.Categories)
                     {
                         <option value="@category.Id">@category.Name</option>
                     }
                 </select>
-                <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
+                <span asp-validation-for="@Model.SelectedCategoriesIds" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.AuthorId" class="form-label">Author</label>
-                <select asp-for="@Model.AuthorId" class="form-control">
+                <label asp-for="@Model.SelectedCategoriesIds" class="form-label">Category</label>
+                <select asp-for="@Model.SelectedCategoriesIds" class="form-control">
+                    <option value=""></option>
+                    @foreach (var category in @Model.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="@Model.SelectedCategoriesIds" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="@Model.SelectedCategoriesIds" class="form-label">Category</label>
+                <select asp-for="@Model.SelectedCategoriesIds" class="form-control">
+                    <option value=""></option>
+                    @foreach (var category in @Model.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="@Model.SelectedCategoriesIds" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="@Model.SelectedAuthorsIds" class="form-label">Author</label>
+                <select asp-for="@Model.SelectedAuthorsIds" class="form-control">
                     <option value=""></option>
                     @foreach (var author in @Model.Authors)
                     {
                         <option value="@author.Id">@author.Name</option>
                     }
                 </select>
-                <span asp-validation-for="@Model.AuthorId" class="text-danger"></span>
+                <span asp-validation-for="@Model.SelectedAuthorsIds" class="text-danger"></span>
+            </div>
+                        <div class="mb-3">
+                <label asp-for="@Model.SelectedAuthorsIds" class="form-label">Author</label>
+                <select asp-for="@Model.SelectedAuthorsIds" class="form-control">
+                    <option value=""></option>
+                    @foreach (var author in @Model.Authors)
+                    {
+                        <option value="@author.Id">@author.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="@Model.SelectedAuthorsIds" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="@Model.SelectedAuthorsIds" class="form-label">Author</label>
+                <select asp-for="@Model.SelectedAuthorsIds" class="form-control">
+                    <option value=""></option>
+                    @foreach (var author in @Model.Authors)
+                    {
+                        <option value="@author.Id">@author.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="@Model.SelectedAuthorsIds" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <input class="btn btn-success mb-2 w-100 p-3 fw-bold" type="submit" value="Add" />
