Organize js files

--- a/LibraNET/Views/Book/Add.cshtml
+++ b/LibraNET/Views/Book/Add.cshtml
@@ -89,5 +89,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/Book/Add.js"></script>
+    <script src="~/js/Shared/AuthorAndCategoryMultipleSelects.js"></script>
 }
