Implement complete add author logic

--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using LibraNET
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Book;
+@using LibraNET.Web.ViewModels.Author;
 @using LibraNET.Web.ViewModels.Enums;
 @using static LibraNET.Common.GeneralApplicationConstants;
 
