--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -40,7 +40,12 @@
 									Add
 								</a>
 								<ul class="dropdown-menu">
-									<li> <a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Add">Add Book</a></li>
+									<li>
+										<a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Add">Add Book</a>
+									</li>
+									<li>
+										<a class="dropdown-item" asp-area="" asp-controller="Author" asp-action="Add">Add Author</a>
+									</li>
 								</ul>
 							</li>
 						}
@@ -48,7 +53,7 @@
 					<partial name="_LoginPartial" />
 				</div>
 			</div>
-		</nav> 
+		</nav>
 	</header>
 	<div class="container">
 		<main role="main">
