Implement complete add category logic

--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
 									<li>
 										<a class="dropdown-item" asp-area="" asp-controller="Author" asp-action="Add">Add Author</a>
 									</li>
+									<li>
+										<a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Add">Add Category</a>
+									</li>
 								</ul>
 							</li>
 						}
