--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Book;
 @using LibraNET.Web.ViewModels.Author;
+@using LibraNET.Web.ViewModels.Category;
 @using LibraNET.Web.ViewModels.Enums;
 @using static LibraNET.Common.GeneralApplicationConstants;
 
