Create all users page and implement logic for making an user admin

--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -104,7 +104,7 @@
 			{
 				previousPage = 1;
 			}
-			int maxPage = (int)Math.Ceiling((double)Model.AllBooksCount / EntitiesPerPage);
+			int maxPage = (int)Math.Ceiling((double)Model.AllBooksCount / BooksPerPage);
 		}
 	</form>
 	@if (Model.Books.Any())
