--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -3,7 +3,10 @@
 @using LibraNET.Web.ViewModels.Book;
 @using LibraNET.Web.ViewModels.Author;
 @using LibraNET.Web.ViewModels.Category;
+@using LibraNET.Web.ViewModels.User;
 @using LibraNET.Web.ViewModels.Enums;
+@using LibraNET.Data.Models;
+@using Microsoft.AspNetCore.Identity;
 @using static LibraNET.Common.GeneralApplicationConstants;
 
 @using System.Text;
