--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
 						</li>
 						@if (User.IsInRole("Admin"))
 						{
+							<li class="nav-item">
+								<a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="All">All Users</a>
+							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link text-white dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									Add
