--- a/LibraNET/Views/Shared/_LoginPartial.cshtml
+++ b/LibraNET/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using LibraNET.Data.Models;
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 <ul class="navbar-nav">
 	@if (SignInManager.IsSignedIn(User))
