--- a/LibraNET/Views/Shared/_Layout.cshtml
+++ b/LibraNET/Views/Shared/_Layout.cshtml
@@ -30,11 +30,14 @@
 						<li class="nav-item">
 							<a class="nav-link text-white" asp-area="" asp-controller="Book" asp-action="All">All Books</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
-						</li>
 						@if (User.IsInRole("Admin"))
 						{
+							<li class="nav-item">
+								<a class="nav-link text-white" asp-area="" asp-controller="Author" asp-action="All">All Authors</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-white" asp-area="" asp-controller="Category" asp-action="All">All Categories</a>
+							</li>
 							<li class="nav-item">
 								<a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="All">All Users</a>
 							</li>
