--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -1,15 +1,14 @@
-﻿@using LibraNET.Services.Data.Contracts;
-@model BookViewModel
+﻿@model BookViewModel
 @inject IImageService imageService
 
 <div class="my-3 col-md-8 col-lg-6 col-xl-4">
-	<div class="card text-black product-card">
+	<div class="card text-black entity-card">
 		<div class="text-center img-container">
 			<img class="p-3" src="~/Images/Books/@(imageService.GetBookImageNameById(Model.ImageId))" alt="@Model.Title" />
 		</div>
 		<div class="card-body text-center">
 			<h5 class="card-title">@Model.Title</h5>
-			<p class="text-muted authors">
+			<p class="text-muted">
 				@{
 					StringBuilder authorsText = new StringBuilder();
 					authorsText.Append(Model.Authors.Count == 1 ? "Author: " : "Authors: ");
