--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -1,11 +1,12 @@
 ﻿@using LibraNET
+@using LibraNET.Data.Models;
+@using LibraNET.Services.Data.Contracts;
 @using LibraNET.Web.ViewModels;
 @using LibraNET.Web.ViewModels.Book;
 @using LibraNET.Web.ViewModels.Author;
 @using LibraNET.Web.ViewModels.Category;
 @using LibraNET.Web.ViewModels.User;
 @using LibraNET.Web.ViewModels.Enums;
-@using LibraNET.Data.Models;
 @using Microsoft.AspNetCore.Identity;
 @using static LibraNET.Common.GeneralApplicationConstants;
 
@@ -13,4 +14,5 @@
 
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
