--- a/LibraNET/Views/Shared/_BookPartial.cshtml
+++ b/LibraNET/Views/Shared/_BookPartial.cshtml
@@ -28,6 +28,17 @@
 				@categoriesText.ToString()
 			</p>
 			<h5 class="fw-bold">@($"${Model.Price:f2}")</h5>
+			@if (User.IsInRole("Admin"))
+			{
+				<form asp-controller="Book" asp-action="Delete" asp-route-id="@Model.Id" method="post">
+					<div class="btn-group w-50" role="group">
+						<a class="btn btn-success" asp-controller="Book" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+						<button class="btn btn-dark" type="submit" onclick="return confirm('Are you sure you want to delete this book: @Model.Title?')">
+							Delete
+						</button>
+					</div>
+				</form>
+			}
 		</div>
 	</div>
 </div>
