Create book partial that doesn't provide functionality for delete and edit

--- a/LibraNET/Views/Book/All.cshtml
+++ b/LibraNET/Views/Book/All.cshtml
@@ -94,7 +94,7 @@
 					}
 					@foreach (var book in Model.Books)
 					{
-						<partial name="_BookPartial" model="@book"></partial>
+						<partial name="_BookAllPartial" model="@book"></partial>
 					}
 				</div>
 			</div>
