Add book details page

--- a/LibraNET/Views/_ViewImports.cshtml
+++ b/LibraNET/Views/_ViewImports.cshtml
@@ -11,6 +11,7 @@
 @using static LibraNET.Common.GeneralApplicationConstants;
 
 @using System.Text;
+@using System.Globalization;
 
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common;
